--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "headlessui": "^0.0.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.252.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
@@ -25,5 +27,8 @@
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3"
   }
 }
