--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.7",
     "headlessui": "^0.0.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.252.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
@@ -26,7 +27,8 @@
     "react-dom": "18.2.0",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3"
